# cmake_tutorial

./: README.md
Demo1/: CMakeLists.txt  main.cpp
Demo2/: CMakeLists.txt  MathFunction.h  main.cpp
Demo3/: CMakeLists.txt  main.cpp
Demo3/math/: MathFunction.cpp
Demo4/: CMakeLists.txt  main.cpp
Demo4/math/: CMakeLists.txt
